tests/feature_tests/error_main3.c
// error: first parameter to 'main' must be of integer type
int main(long a, int b) {}
